// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegisterPage > Snapshot Tests > matches snapshot on desktop (1280px) 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-50 dark:bg-gray-900 px-4 py-8"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  w-full max-w-md"
    >
      <div
        class="text-center mb-6"
      >
        <div
          class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900 mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-plus h-6 w-6 text-primary-600 dark:text-primary-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <line
              x1="19"
              x2="19"
              y1="8"
              y2="14"
            />
            <line
              x1="22"
              x2="16"
              y1="11"
              y2="11"
            />
          </svg>
        </div>
        <h1
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Create Account
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400 mt-2"
        >
          Join Splittat to start splitting receipts
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="first-name"
            >
              First Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="first-name"
              name="firstName"
              placeholder="John"
              type="text"
            />
          </div>
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="last-name"
            >
              Last Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="last-name"
              name="lastName"
              placeholder="Doe"
              type="text"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="email"
            name="email"
            placeholder="you@example.com"
            type="email"
          />
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="password"
            name="password"
            placeholder="••••••••"
            type="password"
          />
          <p
            class="mt-1 text-sm text-gray-500 dark:text-gray-400"
          >
            Must contain uppercase, lowercase, and number
          </p>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="confirm-password"
          >
            Confirm Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="confirm-password"
            name="confirmPassword"
            placeholder="••••••••"
            type="password"
          />
        </div>
        <button
          class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base w-full "
          type="submit"
        >
          Create Account
        </button>
      </form>
      <div
        class="mt-6 text-center"
      >
        <p
          class="text-sm text-gray-600 dark:text-gray-400"
        >
          Already have an account?
           
          <a
            class="font-semibold text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300"
            data-discover="true"
            href="/login"
          >
            Sign in
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegisterPage > Snapshot Tests > matches snapshot on mobile (375px) 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-50 dark:bg-gray-900 px-4 py-8"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  w-full max-w-md"
    >
      <div
        class="text-center mb-6"
      >
        <div
          class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900 mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-plus h-6 w-6 text-primary-600 dark:text-primary-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <line
              x1="19"
              x2="19"
              y1="8"
              y2="14"
            />
            <line
              x1="22"
              x2="16"
              y1="11"
              y2="11"
            />
          </svg>
        </div>
        <h1
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Create Account
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400 mt-2"
        >
          Join Splittat to start splitting receipts
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="first-name"
            >
              First Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="first-name"
              name="firstName"
              placeholder="John"
              type="text"
            />
          </div>
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="last-name"
            >
              Last Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="last-name"
              name="lastName"
              placeholder="Doe"
              type="text"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="email"
            name="email"
            placeholder="you@example.com"
            type="email"
          />
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="password"
            name="password"
            placeholder="••••••••"
            type="password"
          />
          <p
            class="mt-1 text-sm text-gray-500 dark:text-gray-400"
          >
            Must contain uppercase, lowercase, and number
          </p>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="confirm-password"
          >
            Confirm Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="confirm-password"
            name="confirmPassword"
            placeholder="••••••••"
            type="password"
          />
        </div>
        <button
          class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base w-full "
          type="submit"
        >
          Create Account
        </button>
      </form>
      <div
        class="mt-6 text-center"
      >
        <p
          class="text-sm text-gray-600 dark:text-gray-400"
        >
          Already have an account?
           
          <a
            class="font-semibold text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300"
            data-discover="true"
            href="/login"
          >
            Sign in
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegisterPage > Snapshot Tests > matches snapshot on tablet (768px) 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-50 dark:bg-gray-900 px-4 py-8"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  w-full max-w-md"
    >
      <div
        class="text-center mb-6"
      >
        <div
          class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900 mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-plus h-6 w-6 text-primary-600 dark:text-primary-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <line
              x1="19"
              x2="19"
              y1="8"
              y2="14"
            />
            <line
              x1="22"
              x2="16"
              y1="11"
              y2="11"
            />
          </svg>
        </div>
        <h1
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Create Account
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400 mt-2"
        >
          Join Splittat to start splitting receipts
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="first-name"
            >
              First Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="first-name"
              name="firstName"
              placeholder="John"
              type="text"
            />
          </div>
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="last-name"
            >
              Last Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="last-name"
              name="lastName"
              placeholder="Doe"
              type="text"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="email"
            name="email"
            placeholder="you@example.com"
            type="email"
          />
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="password"
            name="password"
            placeholder="••••••••"
            type="password"
          />
          <p
            class="mt-1 text-sm text-gray-500 dark:text-gray-400"
          >
            Must contain uppercase, lowercase, and number
          </p>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="confirm-password"
          >
            Confirm Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="confirm-password"
            name="confirmPassword"
            placeholder="••••••••"
            type="password"
          />
        </div>
        <button
          class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base w-full "
          type="submit"
        >
          Create Account
        </button>
      </form>
      <div
        class="mt-6 text-center"
      >
        <p
          class="text-sm text-gray-600 dark:text-gray-400"
        >
          Already have an account?
           
          <a
            class="font-semibold text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300"
            data-discover="true"
            href="/login"
          >
            Sign in
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegisterPage > Snapshot Tests > matches snapshot with error state 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-50 dark:bg-gray-900 px-4 py-8"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  w-full max-w-md"
    >
      <div
        class="text-center mb-6"
      >
        <div
          class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900 mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-plus h-6 w-6 text-primary-600 dark:text-primary-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <line
              x1="19"
              x2="19"
              y1="8"
              y2="14"
            />
            <line
              x1="22"
              x2="16"
              y1="11"
              y2="11"
            />
          </svg>
        </div>
        <h1
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Create Account
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400 mt-2"
        >
          Join Splittat to start splitting receipts
        </p>
      </div>
      <div
        class="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 rounded-lg p-4 mb-4"
      >
        <div
          class="flex items-start gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-5 w-5 text-red-600 dark:text-red-400 shrink-0 mt-0.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <div
            class="flex-1"
          >
            <h4
              class="text-sm font-semibold text-red-800 dark:text-red-300 mb-1"
            >
              Registration Failed
            </h4>
            <p
              class="text-sm text-red-700 dark:text-red-400"
            >
              Email already exists
            </p>
          </div>
          <button
            aria-label="Dismiss"
            class="text-red-600 dark:text-red-400 hover:text-red-800 dark:hover:text-red-300 transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="first-name"
            >
              First Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="first-name"
              name="firstName"
              placeholder="John"
              type="text"
            />
          </div>
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="last-name"
            >
              Last Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="last-name"
              name="lastName"
              placeholder="Doe"
              type="text"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="email"
            name="email"
            placeholder="you@example.com"
            type="email"
          />
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="password"
            name="password"
            placeholder="••••••••"
            type="password"
          />
          <p
            class="mt-1 text-sm text-gray-500 dark:text-gray-400"
          >
            Must contain uppercase, lowercase, and number
          </p>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="confirm-password"
          >
            Confirm Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="confirm-password"
            name="confirmPassword"
            placeholder="••••••••"
            type="password"
          />
        </div>
        <button
          class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base w-full "
          type="submit"
        >
          Create Account
        </button>
      </form>
      <div
        class="mt-6 text-center"
      >
        <p
          class="text-sm text-gray-600 dark:text-gray-400"
        >
          Already have an account?
           
          <a
            class="font-semibold text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300"
            data-discover="true"
            href="/login"
          >
            Sign in
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegisterPage > Snapshot Tests > matches snapshot with loading state 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-50 dark:bg-gray-900 px-4 py-8"
  >
    <div
      class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 shadow-sm p-6  w-full max-w-md"
    >
      <div
        class="text-center mb-6"
      >
        <div
          class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900 mb-4"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-plus h-6 w-6 text-primary-600 dark:text-primary-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <line
              x1="19"
              x2="19"
              y1="8"
              y2="14"
            />
            <line
              x1="22"
              x2="16"
              y1="11"
              y2="11"
            />
          </svg>
        </div>
        <h1
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Create Account
        </h1>
        <p
          class="text-gray-600 dark:text-gray-400 mt-2"
        >
          Join Splittat to start splitting receipts
        </p>
      </div>
      <form
        class="space-y-4"
      >
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="first-name"
            >
              First Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="first-name"
              name="firstName"
              placeholder="John"
              type="text"
            />
          </div>
          <div
            class="w-full"
          >
            <label
              class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
              for="last-name"
            >
              Last Name
            </label>
            <input
              class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
              id="last-name"
              name="lastName"
              placeholder="Doe"
              type="text"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="email"
            name="email"
            placeholder="you@example.com"
            type="email"
          />
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="password"
            name="password"
            placeholder="••••••••"
            type="password"
          />
          <p
            class="mt-1 text-sm text-gray-500 dark:text-gray-400"
          >
            Must contain uppercase, lowercase, and number
          </p>
        </div>
        <div
          class="w-full"
        >
          <label
            class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-300"
            for="confirm-password"
          >
            Confirm Password
          </label>
          <input
            class="block w-full rounded-lg border px-4 py-2 text-base transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 disabled:opacity-50 disabled:cursor-not-allowed border-gray-300 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white "
            id="confirm-password"
            name="confirmPassword"
            placeholder="••••••••"
            type="password"
          />
        </div>
        <button
          class="inline-flex items-center justify-center font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary-600 text-white hover:bg-primary-700 focus:ring-primary-500 dark:bg-primary-500 dark:hover:bg-primary-600 px-4 py-2 text-base w-full "
          disabled=""
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle mr-2 h-4 w-4 animate-spin"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
          Create Account
        </button>
      </form>
      <div
        class="mt-6 text-center"
      >
        <p
          class="text-sm text-gray-600 dark:text-gray-400"
        >
          Already have an account?
           
          <a
            class="font-semibold text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300"
            data-discover="true"
            href="/login"
          >
            Sign in
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
